syntax = "proto3";

package route;

message LatLng {
  double latitude = 1;
  double longitude = 2;
}


message Route {
   LatLng destinations = 1;
   LatLng origin = 2;
}

message Legs {
   double distance = 1;
   double duration = 2;
}

message GetRouteResponse {
  double distance = 1;
  double eta = 2;
  repeated Legs legs = 3;
  string polyline = 4;
}

message GetRouteRequest {
  Route routes = 1;
}


service RouteService {
    rpc GetRoute (GetRouteRequest) returns (GetRouteResponse);
}
